--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <script src="https://kit.fontawesome.com/5b74c30c91.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="src/styles.css">
+    <link rel="stylesheet" href="src/style.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 
